--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <div >
                     <img src="assets/images/main/founder.jpg" alt="founder image" width="300px" height="100px" style="float:center;">
                     <br>
-                    <h4 style="float:center;margin:5px;" >Dr Santhosh Yadav </h4>
+                    <h4 style="float:center;margin:5px;" >Dr Dasari Santosh Yadav </h4>
                    
 			    </div>
 			</div>
